--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.naelstrof.jigglephysics": "file:../Addons/UnityJigglePhysics-3.7.1",
     "com.popcron.extra-controllers": "file:../Assets/extra-controllers-main",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.3.1",
